# xlisp

./: CMakeLists.txt  xlinit.lsp
.gear/: rules  xlisp.spec
ext/: CMakeLists.txt
include/: xlisp.h
src/: CMakeLists.txt  xlansi.c  xlftab.c  xlfun3.c  xlinit.c  xlmain.c
xlisp/: CMakeLists.txt  xlisp.c
